# MLSys

./: .gitignore  CLAUDE.md  PROBLEM.md  README.md
.claude/: settings.json
.claude/agents/: architect.md  backend-dev.md  cloud-deployer.md  code-reviewer.md  debugger.md  frontend-dev.md  git-deployer.md  judge.md  orchestrator.md  planner.md  product-manager.md  refactor.md  security-reviewer.md  tester.md
.claude/commands/: architect.md  audit.md  backend-dev.md  cloud-deploy.md  commit.md  create-issue.md  create-pr.md  frontend-dev.md  generate-agent.md  generate-command.md  generate-skill.md  git-deploy.md  investigate.md  judge.md  orchestrate.md  plan.md  postman.md  product-manager.md  readme-generator.md  resolve-review.md  resume-session.md  review.md  save-session.md  search-first.md  security-review.md  tdd.md  tester.md  upgrade.md  validate-config.md  validate-e2e.md  verify.md
.claude/rules/: coding-standards.md  git.md  security.md
.github/workflows/: ci.yml
solution/: CHANGELOG.md  README.md
solution/agent/: agent.py  evaluator.py  scheduler.py
solution/backend/: pyproject.toml
solution/backend/mlsys_scheduler/: __init__.py  dag.py  models.py  parser.py  serializer.py
solution/backend/rust/: Cargo.toml
solution/backend/rust/src/: baseline.rs  dag.rs  evaluate.rs  latency.rs  main.rs  memory.rs  models.rs  parser.rs  serializer.rs
solution/backend/rust/src/optimizer/: fusion.rs  granularity.rs  mod.rs  pipeline.rs  retention.rs  splitk.rs  traversal.rs
solution/backend/tests/: test_evaluator.py
solution/requirements/: moscow.md  (+3 more)
(+68 files in other folders)
