[project]
name = "mlsys-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mlsys-solve = "mlsys_scheduler.cli:solve"
mlsys-evaluate = "mlsys_scheduler.cli:evaluate_cmd"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
